# UTLib

./: .editorconfig  .gitlab-ci.yml  .gitmodules  .travis.yml  Dockerfile  README.md  meson.build  meson_options.txt
.github/workflows/: CI.yml
doc/: meson.build
lib/: client.vala  meson.build  pc.meson  youtube-service.vala
lib/data/: thumbnail.vala  video-localization.vala  video-snippet.vala  video.vala
lib/data/video/: audio-stream.vala  content-details.vala  content-rating.vala  file-details.vala  live-streaming-details.vala  player.vala  processing-details.vala  processing-progress.vala  recording-details.vala  region-restriction.vala  statistics.vala  status.vala  stream.vala  suggestions.vala  tag-suggestion.vala  topic-details.vala  video-localization.vala  video-snippet.vala  video-stream.vala  video.vala
lib/errors/: parser-error.vala  request-error.vala
lib/requests/: parameter.vala  request.vala  video-list-request.vala
lib/resources/: thumbnail.vala  videos-resource.vala
lib/resources/video/: live-streaming-details.vala  processing-details.vala  statistics.vala  status.vala  video-localization.vala  video-snippet.vala  video-stream.vala  video.vala
lib/responses/: list-response.vala  page-info.vala  video-list-response.vala
lib/services/: parameters-service.vala
src/: meson.build  pc.meson  utils.vala
src/requests/: request.vala  video-categories-list-request.vala
src/resources/video-category/: video-category-snippet.vala  video-category.vala
src/responses/: list-response.vala  page-info.vala
src/services/: property-service.vala  property.vala
tests/: meson.build  test-property-service.vala  video-list-tests.vala
